gitHub profile viewer finished

--- a/GitHub-Profile-Viewer/html/index.html
+++ b/GitHub-Profile-Viewer/html/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Profile Viewer</title>
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>GitHub Profile Viewer</h1>
+    <input type="text" id="username" placeholder="Enter your GitHub username" />
+    <button onclick="fetchProfile()">Fetch User Data</button>
+    <div id="profile"></div>
+    <script src="../js/index.js"></script>
+  </body>
 </html>
